frontend/scss/organisms/_o-digital-explorer.scss
body {
  background-color: $color__black--91;
}

html:has(.o-digital-explorer) {
  right: unset !important;
}

.o-digital-explorer {
  width: 100vw;
  position: relative;
  left: 50%;
  margin-left: -50vw;
  min-height: 100vh;
  background: #fff;
  z-index: 1;

  &.kioskMode {
    position: relative;
    width: 100vw;
    height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    color: white;
    text-align: center;
    padding: 0;
  }

  .o-blocks {
    &.o-layout_block {
      .m-media {
        height: 100%;
      }
    }

    .paragraph-wrapper {
      display: flex;
      flex-direction: column;
      gap: 1.5rem;

      h2, p {
        color: $color__white !important;
        font-family: $serif-font--loaded;
        text-align: start;
        text-transform: none;
      }

      h2 {
        padding-top: 2rem;
        letter-spacing: unset;
        font-size: 3.5rem;
        line-height: normal !important;
      }

      p {
        font-size: 1.25rem !important;
        line-height: 130% !important;
      }
    }

    & .m-media:not(:only-child) {
      min-height: 0;
      flex: 1 1 auto;
      display: flex;
      flex-direction: column;
      width: inherit;
    }

    .m-media__img {
      flex: 1;
      overflow: hidden;
      position: relative;

      img {
        max-height: unset !important;
        object-fit: cover;
        height: 100% !important;
      }
    }

    .f-caption {
      padding-right: 0;
      color: #f6f6f6 !important;
      font-family: $sans-serif-font--loaded !important;
      text-align: left;
    }
  }
}

#a17:has(.kioskMode) {
  padding: 0 !important;
}

